--- a/.verb.md
+++ b/.verb.md
@@ -2,7 +2,6 @@
 
 > {%= description %}
 
-## Install
 {%= include("install-npm", {save: true}) %}
 
 ## Run tests
@@ -79,7 +78,7 @@ Pull requests and stars are always welcome. For bugs and feature requests, [plea
 {%= include("author") %}
 
 ## License
-{%= copyright() %}
+{%= copyright({year: 2014}) %}
 {%= license() %}
 
 ***
