--- a/.verb.md
+++ b/.verb.md
@@ -24,7 +24,7 @@ range(start, stop, increment);
 
  - `start`: the number or letter to start with
  - `end`: the number or letter to end with
- - `increment`: optionally pass the increment to use. works for letters or numbers
+ - `step`: optionally pass the increment to use. works for letters or numbers
 
 **Examples**
 
@@ -70,6 +70,66 @@ range('a', 'e', function (val, isLetter, i) {
 });
 //=> ['a0', 'b1', 'c2', 'd3', 'e4']
 ```
+
+### Special characters
+
+A special character may be passed as the third arg instead of a step increment. e.g:
+
+```js
+range('a', 'z', SPECIAL_CHARACTER_HERE);
+```
+
+Depending on how fill-range is implemented, the These characters can be pretty useful when  brace expansion and similar use case.
+
+
+#### `>`
+
+Collapses all values in the returned array to a single value.
+
+**Examples:**
+
+```js
+range('a', 'e', '>');
+//=> ['abcde']
+
+range('5', '8', '>');
+//=> ['5678']
+
+range('2', '20', '2>');
+//=> ['2468101214161820']
+```
+
+
+#### `?`
+
+Uses [randomatic] to generate randomized alpha, numeric, or alpha-numeric patterns based on the provided arguments.
+
+**Examples:**
+
+_(all results are obviously examples, since the actual results will be randomized)_
+
+Generate a 5-character, uppercase, alphabetical string:
+
+```js
+range('A', 5, '?');
+//=> ['NSHAK']
+```
+
+Generate a 5-digit random number:
+
+```js
+range('0', 5, '?');
+//=> ['36583']
+```
+
+Generate a 10-character alpha-numeric string:
+
+```js
+range('A0', 10, '?');
+//=> ['5YJD60VQNN']
+```
+
+See the [randomatic] repo for all available options and or to create issues or feature requests related to randomization.
 
 ## Contributing
 Pull requests and stars are always welcome. For bugs and feature requests, [please create an issue]({%= bugs.url %})
