--- a/.verb.md
+++ b/.verb.md
@@ -62,8 +62,8 @@ range('A', 'E', 2)
 Optionally pass a custom function as the third or fourth argument:
 
 ```js
-range('a', 'e', function (val, isNumeric, i) {
-  if (!isNumeric) {
+range('a', 'e', function (val, isNumber, pad, i) {
+  if (!isNumber) {
     return String.fromCharCode(val) + i;
   }
   return val;
