--- a/.verb.md
+++ b/.verb.md
@@ -4,12 +4,6 @@
 
 {%= include("install-npm", {save: true}) %}
 
-## Run tests
-
-```bash
-npm test
-```
-
 ## Usage
 
 ```js
@@ -164,6 +158,15 @@ range('A0', 10, '?');
 ```
 
 See the [randomatic] repo for all available options and or to create issues or feature requests related to randomization.
+
+
+## Run tests
+
+Install dev dependencies:
+
+```bash
+npm i -d && npm test
+```
 
 ## Contributing
 Pull requests and stars are always welcome. For bugs and feature requests, [please create an issue]({%= bugs.url %})
