--- a/.verb.md
+++ b/.verb.md
@@ -168,6 +168,13 @@ Install dev dependencies:
 npm i -d && npm test
 ```
 
+## Related
+
+- [micromatch]: wildcard/glob matcher for javascript. a faster alternative to minimatch.
+- [expand-range]: uses fill-range for range expansion in strings
+- [braces]: uses expand range to do range expansion in glob patterns and braces.
+
+
 ## Contributing
 Pull requests and stars are always welcome. For bugs and feature requests, [please create an issue]({%= bugs.url %})
 
@@ -183,3 +190,7 @@ Pull requests and stars are always welcome. For bugs and feature requests, [plea
 {%= include("footer") %}
 
 [randomatic]: https://github.com/jonschlinkert/randomatic
+
+[expand-range]: https://github.com/jonschlinkert/expand-range
+[micromatch]: https://github.com/jonschlinkert/micromatch
+[braces]: https://github.com/jonschlinkert/braces
