--- a/.verb.md
+++ b/.verb.md
@@ -8,6 +8,9 @@
 
 ```js
 var range = require('{%= name %}');
+
+range('a', 'e')
+//=> ['a', 'b', 'c', 'd', 'e']
 ```
 
 **Params**
@@ -78,7 +81,7 @@ range('a', 'z', SPECIAL_CHARACTER_HERE);
 
  - `+`: repeat the given string `n` times
  - `|`: create a regex-ready string, instead of an array
- - `>`: collapse/join values to single array element
+ - `>`: join values to single array element
  - `?`: randomize the given pattern using [randomatic]
 
 #### `+`
@@ -95,9 +98,9 @@ range('abc', 2, '+');
 //=> ['abc', 'abc']
 ```
 
-#### `|`
+#### `|` and `~`
 
-Creates a regex-ready string from the expanded arguments.
+Creates a regex-capable string (either a logical `or` or a character class) from the expanded arguments.
 
 **Examples:**
 
@@ -105,14 +108,51 @@ Creates a regex-ready string from the expanded arguments.
 range('a', 'c', '|');
 //=> ['(a|b|c)'
 
+range('a', 'c', '~');
+//=> ['[a-c]'
+
 range('a', 'z', '|5');
 //=> ['(a|f|k|p|u|z)'
+```
+
+**Automatic separator correction**
+
+To avoid this error:
+
+> `Range out of order in character class`
+
+Fill-range detects invalid sequences and uses the correct syntax. For example:
+
+**invalid** (regex)
+
+If you pass these:
+
+```js
+range('a', 'z', '~5');
+// which would result in this
+//=> ['[a-f-k-p-u-z]']
+
+range('10', '20', '~');
+// which would result in this
+//=> ['[10-20]']
+```
+
+**valid** (regex)
+
+fill-range corrects them to this:
+
+```js
+range('a', 'z', '~5');
+//=> ['(a|f|k|p|u|z)'
+
+range('10', '20', '~');
+//=> ['(10-20)'
 ```
 
 
 #### `>`
 
-Collapses all values in the returned array to a single value.
+Joins all values in the returned array to a single value.
 
 **Examples:**
 
