--- a/.verb.md
+++ b/.verb.md
@@ -9,19 +9,24 @@
 ```js
 var range = require('{%= name %}');
 
-range('a', 'e')
+range('a', 'e');
 //=> ['a', 'b', 'c', 'd', 'e']
 ```
 
 **Params**
 
 ```js
-range(start, stop, increment);
+range(start, stop, step, options, fn);
 ```
 
- - `start`: the number or letter to start with
- - `end`: the number or letter to end with
- - `step`: optionally pass the increment to use. works for letters or numbers
+ - `start`: **{String|Number}** the number or letter to start with
+ - `end`: **{String|Number}** the number or letter to end with
+ - `step`: **{String|Number}** optionally pass the step to use. works for letters or numbers.
+ - `options`: **{Object}**:
+    + `makeRe`: return a regex-compatible string (still returned as an array for consistency)
+    + `step`: pass the step on the options as an alternative to passing it as an argument
+    + `silent`: `true` by default, set to false to throw errors for invalid ranges. 
+ - `fn`: **{Function}** optionally [pass a function](#custom-function) to modify each character 
 
 
 **Examples**
@@ -54,6 +59,24 @@ range('a', 'e', 2)
 range('A', 'E', 2)
 //=> ['A', 'C', 'E']
 ```
+
+### Invalid ranges
+
+When an invalid range is passed, `null` is returned. 
+
+```js
+range('1.1', '2');
+//=> null
+
+range('a', '2');
+//=> null
+
+range(1, 10, 'foo');
+//=> null
+```
+
+If you want errors to be throw, pass `silent: false` on the options:
+
 
 ### Custom function
 
