--- a/.verb.md
+++ b/.verb.md
@@ -4,6 +4,8 @@
 
 {%= include("install-npm", {save: true}) %}
 
+<!-- toc -->
+
 ## Usage
 
 ```js
@@ -107,7 +109,9 @@ range('a', 'z', SPECIAL_CHARACTER_HERE);
  - `>`: join values to single array element
  - `?`: randomize the given pattern using [randomatic]
 
-#### `+`
+#### plus 
+
+Character: _(`+`)_
 
 Repeat the first argument the number of times passed on the second argument.
 
@@ -121,7 +125,9 @@ range('abc', 2, '+');
 //=> ['abc', 'abc']
 ```
 
-#### `|` and `~`
+#### pipe and tilde
+
+Characters: _(`|` and `~`)_
 
 Creates a regex-capable string (either a logical `or` or a character class) from the expanded arguments.
 
@@ -172,8 +178,9 @@ range('10', '20', '~');
 //=> ['(10-20)'
 ```
 
+#### angle bracket
 
-#### `>`
+Character: _(`>`)_
 
 Joins all values in the returned array to a single value.
 
@@ -191,7 +198,9 @@ range('2', '20', '2>');
 ```
 
 
-#### `?`
+#### question mark
+
+Character: _(`?`)_
 
 Uses [randomatic] to generate randomized alpha, numeric, or alpha-numeric patterns based on the provided arguments.
 
@@ -222,24 +231,14 @@ range('A0', 10, '?');
 
 See the [randomatic] repo for all available options and or to create issues or feature requests related to randomization.
 
+## Other useful libs
+{%= related(['micromatch', 'expand-range', 'braces', 'is-glob']) %}
 
-## Run tests
-
-Install dev dependencies:
-
-```bash
-npm i -d && npm test
-```
-
-## Related
-
-- [micromatch]: wildcard/glob matcher for javascript. a faster alternative to minimatch.
-- [expand-range]: uses fill-range for range expansion in strings
-- [braces]: uses expand range to do range expansion in glob patterns and braces.
-
+## Running tests
+{%= include("tests") %}
 
 ## Contributing
-Pull requests and stars are always welcome. For bugs and feature requests, [please create an issue]({%= bugs.url %})
+{%= include("contributing") %}
 
 ## Author
 {%= include("author") %}
@@ -252,8 +251,4 @@ Pull requests and stars are always welcome. For bugs and feature requests, [plea
 
 {%= include("footer") %}
 
-[randomatic]: https://github.com/jonschlinkert/randomatic
-
-[expand-range]: https://github.com/jonschlinkert/expand-range
-[micromatch]: https://github.com/jonschlinkert/micromatch
-[braces]: https://github.com/jonschlinkert/braces
+{%= reflinks(['randomatic', 'expand-range', 'micromatch', 'braces']) %}
