--- a/.verb.md
+++ b/.verb.md
@@ -2,6 +2,8 @@
 
 > {%= description %}
 
+## Install
+
 {%= include("install-npm", {save: true}) %}
 
 <!-- toc -->
@@ -232,7 +234,7 @@ range('A0', 10, '?');
 See the [randomatic] repo for all available options and or to create issues or feature requests related to randomization.
 
 ## Other useful libs
-{%= related(['micromatch', 'expand-range', 'braces', 'is-glob']) %}
+{%= related(verb.related.list) %}
 
 ## Running tests
 {%= include("tests") %}
