run update, refactor benchmarks

--- a/.verb.md
+++ b/.verb.md
@@ -247,10 +247,10 @@ See the [randomatic] repo for all available options and or to create issues or f
 
 ## License
 {%= copyright({year: 2014}) %}
-{%= license() %}
+{%= license %}
 
 ***
 
 {%= include("footer") %}
 
-{%= reflinks(['randomatic', 'expand-range', 'micromatch', 'braces']) %}
+{%= reflinks(verb.reflinks) %}
