--- a/.verb.md
+++ b/.verb.md
@@ -1,66 +1,83 @@
-# {%= name %} {%= badge("fury") %} {%= badge("travis") %}
-
-> {%= description %}
-
-## Install
-
-{%= include("install-npm", {save: true}) %}
-
-<!-- toc -->
-
 ## Usage
 
-```js
-var range = require('{%= name %}');
+Expands numbers and letters, optionally using a `step` as the last argument. _(Numbers may be defined as JavaScript numbers or strings)_.
 
-range('a', 'e');
+```js
+var fill = require('{%= name %}');
+
+console.log(fill('a', 'e'));
 //=> ['a', 'b', 'c', 'd', 'e']
+
+console.log(fill(0, 25, 5));
+//=> [ 0, 5, 10, 15, 20, 25 ]
+
+console.log(fill('a', 'e', {toRegex: true}));
+//=> '[a-e]'
+
+console.log(fill('a', 'z', 3, {toRegex: true}));
+//=> 'a|d|g|j|m|p|s|v|y'
+
+console.log(fill('1', '100', {toRegex: true}));
+//=> '[1-9]|[1-9][0-9]|100'
+```
+
+Create regex-compatible ranges (returns a string, which can be used however you need to create a regex):
+
+```js
+console.log(fill('a', 'e', {toRegex: true}));
+//=> '[a-e]'
+
+console.log(fill('a', 'z', 3, {toRegex: true}));
+//=> 'a|d|g|j|m|p|s|v|y'
+
+console.log(fill('1', '100', {toRegex: true}));
+//=> '[1-9]|[1-9][0-9]|100'
 ```
 
 **Params**
 
 ```js
-range(start, stop, step, options, fn);
+fill(start, stop, step, options, fn);
 ```
 
  - `start`: **{String|Number}** the number or letter to start with
  - `end`: **{String|Number}** the number or letter to end with
  - `step`: **{String|Number}** optionally pass the step to use. works for letters or numbers.
  - `options`: **{Object}**:
-    + `makeRe`: return a regex-compatible string (still returned as an array for consistency)
+    + `toRegex`: return a regex-compatible string (still returned as an array for consistency)
     + `step`: pass the step on the options as an alternative to passing it as an argument
-    + `silent`: `true` by default, set to false to throw errors for invalid ranges. 
- - `fn`: **{Function}** optionally [pass a function](#custom-function) to modify each character 
+    + `strict`: `undefined` by default, set to true to throw errors on invalid ranges. 
+ - `fn`: **{Function}** optionally [pass a function](#custom-function) to modify each character. This can also be defined as `options.transform`
 
 
 **Examples**
 
 ```js
-range(1, 3)
+fill(1, 3)
 //=> ['1', '2', '3']
 
-range('1', '3')
+fill('1', '3')
 //=> ['1', '2', '3']
 
-range('0', '-5')
+fill('0', '-5')
 //=> [ '0', '-1', '-2', '-3', '-4', '-5' ]
 
-range(-9, 9, 3)
+fill(-9, 9, 3)
 //=> [ '-9', '-6', '-3', '0', '3', '6', '9' ])
 
-range('-1', '-10', '-2')
+fill('-1', '-10', '-2')
 //=> [ '-1', '-3', '-5', '-7', '-9' ]
 
-range('1', '10', '2')
+fill('1', '10', '2')
 //=> [ '1', '3', '5', '7', '9' ]
 
-range('a', 'e')
+fill('a', 'e')
 //=> ['a', 'b', 'c', 'd', 'e']
 
-range('a', 'e', 2)
+fill('a', 'e', 2)
 //=> ['a', 'c', 'e']
 
-range('A', 'E', 2)
+fill('A', 'E', 2)
 //=> ['A', 'C', 'E']
 ```
 
@@ -69,25 +86,25 @@ range('A', 'E', 2)
 When an invalid range is passed, `null` is returned. 
 
 ```js
-range('1.1', '2');
+fill('1.1', '2');   // decimals not supported in ranges
 //=> null
 
-range('a', '2');
+fill('a', '2');     // unmatched values
 //=> null
 
-range(1, 10, 'foo');
+fill(1, 10, 'foo'); // invalid step
 //=> null
 ```
 
-If you want errors to be throw, pass `silent: false` on the options:
+If you want errors to be throw, set `options.strict` to true.
 
 
 ### Custom function
 
-Optionally pass a custom function as the third or fourth argument:
+Optionally pass a custom function as the third or fourth argument or on `options.transform`.
 
 ```js
-range('a', 'e', function (val, isNumber, pad, i) {
+fill('a', 'e', function (val, isNumber, pad, i) {
   if (!isNumber) {
     return String.fromCharCode(val) + i;
   }
@@ -95,162 +112,3 @@ range('a', 'e', function (val, isNumber, pad, i) {
 });
 //=> ['a0', 'b1', 'c2', 'd3', 'e4']
 ```
-
-### Special characters
-
-A special character may be passed as the third arg instead of a step increment. These characters can be pretty useful for brace expansion, creating file paths, test fixtures and similar use case.
-
-```js
-range('a', 'z', SPECIAL_CHARACTER_HERE);
-```
-
-**Supported characters**
-
- - `+`: repeat the given string `n` times
- - `|`: create a regex-ready string, instead of an array
- - `>`: join values to single array element
- - `?`: randomize the given pattern using [randomatic]
-
-#### plus 
-
-Character: _(`+`)_
-
-Repeat the first argument the number of times passed on the second argument.
-
-**Examples:**
-
-```js
-range('a', 3, '+');
-//=> ['a', 'a', 'a']
-
-range('abc', 2, '+');
-//=> ['abc', 'abc']
-```
-
-#### pipe and tilde
-
-Characters: _(`|` and `~`)_
-
-Creates a regex-capable string (either a logical `or` or a character class) from the expanded arguments.
-
-**Examples:**
-
-```js
-range('a', 'c', '|');
-//=> ['(a|b|c)'
-
-range('a', 'c', '~');
-//=> ['[a-c]'
-
-range('a', 'z', '|5');
-//=> ['(a|f|k|p|u|z)'
-```
-
-**Automatic separator correction**
-
-To avoid this error:
-
-> `Range out of order in character class`
-
-Fill-range detects invalid sequences and uses the correct syntax. For example:
-
-**invalid** (regex)
-
-If you pass these:
-
-```js
-range('a', 'z', '~5');
-// which would result in this
-//=> ['[a-f-k-p-u-z]']
-
-range('10', '20', '~');
-// which would result in this
-//=> ['[10-20]']
-```
-
-**valid** (regex)
-
-fill-range corrects them to this:
-
-```js
-range('a', 'z', '~5');
-//=> ['(a|f|k|p|u|z)'
-
-range('10', '20', '~');
-//=> ['(10-20)'
-```
-
-#### angle bracket
-
-Character: _(`>`)_
-
-Joins all values in the returned array to a single value.
-
-**Examples:**
-
-```js
-range('a', 'e', '>');
-//=> ['abcde']
-
-range('5', '8', '>');
-//=> ['5678']
-
-range('2', '20', '2>');
-//=> ['2468101214161820']
-```
-
-
-#### question mark
-
-Character: _(`?`)_
-
-Uses [randomatic] to generate randomized alpha, numeric, or alpha-numeric patterns based on the provided arguments.
-
-**Examples:**
-
-_(actual results would obviously be randomized)_
-
-Generate a 5-character, uppercase, alphabetical string:
-
-```js
-range('A', 5, '?');
-//=> ['NSHAK']
-```
-
-Generate a 5-digit random number:
-
-```js
-range('0', 5, '?');
-//=> ['36583']
-```
-
-Generate a 10-character alpha-numeric string:
-
-```js
-range('A0', 10, '?');
-//=> ['5YJD60VQNN']
-```
-
-See the [randomatic] repo for all available options and or to create issues or feature requests related to randomization.
-
-## Other useful libs
-{%= related(verb.related.list) %}
-
-## Running tests
-{%= include("tests") %}
-
-## Contributing
-{%= include("contributing") %}
-
-## Author
-{%= include("author") %}
-
-## License
-{%= copyright({year: 2014}) %}
-{%= license() %}
-
-***
-
-{%= include("footer") %}
-
-{%= reflinks(['randomatic', 'expand-range', 'micromatch', 'braces']) %}
