--- a/.verb.md
+++ b/.verb.md
@@ -4,104 +4,153 @@ Expands numbers and letters, optionally using a `step` as the last argument. _(N
 
 ```js
 var fill = require('{%= name %}');
+fill(from, to[, step, options]);
 
-console.log(fill('a', 'e'));
-//=> ['a', 'b', 'c', 'd', 'e']
-
-console.log(fill(0, 25, 5));
-//=> [ 0, 5, 10, 15, 20, 25 ]
-
-console.log(fill('a', 'e', {toRegex: true}));
-//=> '[a-e]'
-
-console.log(fill('a', 'z', 3, {toRegex: true}));
-//=> 'a|d|g|j|m|p|s|v|y'
-
-console.log(fill('1', '100', {toRegex: true}));
-//=> '[1-9]|[1-9][0-9]|100'
+// examples
+console.log(fill('1', '10'));                  //=> '[ '1', '2', '3', '4', '5', '6', '7', '8', '9', '10' ]'
+console.log(fill('1', '10', {toRegex: true})); //=> [1-9]|10
 ```
 
-Create regex-compatible ranges (returns a string, which can be used however you need to create a regex):
-
-```js
-console.log(fill('a', 'e', {toRegex: true}));
-//=> '[a-e]'
-
-console.log(fill('a', 'z', 3, {toRegex: true}));
-//=> 'a|d|g|j|m|p|s|v|y'
-
-console.log(fill('1', '100', {toRegex: true}));
-//=> '[1-9]|[1-9][0-9]|100'
-```
 
 **Params**
 
-```js
-fill(start, stop, step, options, fn);
-```
-
- - `start`: **{String|Number}** the number or letter to start with
- - `end`: **{String|Number}** the number or letter to end with
- - `step`: **{String|Number}** optionally pass the step to use. works for letters or numbers.
- - `options`: **{Object}**:
-    + `toRegex`: return a regex-compatible string (still returned as an array for consistency)
-    + `step`: pass the step on the options as an alternative to passing it as an argument
-    + `strict`: `undefined` by default, set to true to throw errors on invalid ranges. 
- - `fn`: **{Function}** optionally [pass a function](#custom-function) to modify each character. This can also be defined as `options.transform`
+- `from`: **{String|Number}** the number or letter to start with
+- `to`: **{String|Number}** the number or letter to end with
+- `step`: **{String|Number|Object|Function}** Optionally pass a [step](#optionsstep) to use.
+- `options`: **{Object|Function}**: See all available [options](#options)
 
 
-**Examples**
+## Examples
+
+By default, an array of values is returned.
+
+**Alphabetical ranges**
 
 ```js
-fill(1, 3)
-//=> ['1', '2', '3']
-
-fill('1', '3')
-//=> ['1', '2', '3']
-
-fill('0', '-5')
-//=> [ '0', '-1', '-2', '-3', '-4', '-5' ]
-
-fill(-9, 9, 3)
-//=> [ '-9', '-6', '-3', '0', '3', '6', '9' ])
-
-fill('-1', '-10', '-2')
-//=> [ '-1', '-3', '-5', '-7', '-9' ]
-
-fill('1', '10', '2')
-//=> [ '1', '3', '5', '7', '9' ]
-
-fill('a', 'e')
-//=> ['a', 'b', 'c', 'd', 'e']
-
-fill('a', 'e', 2)
-//=> ['a', 'c', 'e']
-
-fill('A', 'E', 2)
-//=> ['A', 'C', 'E']
+console.log(fill('a', 'e')); //=> ['a', 'b', 'c', 'd', 'e']
+console.log(fill('A', 'E')); //=> [ 'A', 'B', 'C', 'D', 'E' ]
 ```
 
-### Invalid ranges
+**Numerical ranges**
 
-When an invalid range is passed, `null` is returned. 
+Numbers can be defined as actual numbers or strings.
+
+```js
+console.log(fill(1, 5));     //=> [ 1, 2, 3, 4, 5 ]
+console.log(fill('1', '5')); //=> [ 1, 2, 3, 4, 5 ]
+```
+
+**Negative ranges**
+
+Numbers can be defined as actual numbers or strings.
+
+```js
+console.log(fill('-5', '-1')); //=> [ '-5', '-4', '-3', '-2', '-1' ]
+console.log(fill('-5', '5')); //=> [ '-5', '-4', '-3', '-2', '-1', '0', '1', '2', '3', '4', '5' ]
+```
+
+**Steps (increments)**
+
+```js
+// numerical ranges with increments
+console.log(fill('0', '25', 4)); //=> [ '0', '4', '8', '12', '16', '20', '24' ]
+console.log(fill('0', '25', 5)); //=> [ '0', '5', '10', '15', '20', '25' ]
+console.log(fill('0', '25', 6)); //=> [ '0', '6', '12', '18', '24' ]
+
+// alphabetical ranges with increments
+console.log(fill('a', 'z', 4)); //=> [ 'a', 'e', 'i', 'm', 'q', 'u', 'y' ]
+console.log(fill('a', 'z', 5)); //=> [ 'a', 'f', 'k', 'p', 'u', 'z' ]
+console.log(fill('a', 'z', 6)); //=> [ 'a', 'g', 'm', 's', 'y' ]
+```
+
+## Options
+
+### options.step
+
+**Type**: `number` (formatted as a string or number)
+
+**Default**: `undefined`
+
+**Description**: The increment to use for the range. Can be used with letters or numbers.
+
+**Example(s)**
+
+```js
+// numbers
+console.log(fill('1', '10', 2)); //=> [ '1', '3', '5', '7', '9' ]
+console.log(fill('1', '10', 3)); //=> [ '1', '4', '7', '10' ]
+console.log(fill('1', '10', 4)); //=> [ '1', '5', '9' ]
+
+// letters
+console.log(fill('a', 'z', 5)); //=> [ 'a', 'f', 'k', 'p', 'u', 'z' ]
+console.log(fill('a', 'z', 7)); //=> [ 'a', 'h', 'o', 'v' ]
+console.log(fill('a', 'z', 9)); //=> [ 'a', 'j', 's' ]
+```
+
+### options.strictRanges
+
+**Type**: `boolean`
+
+**Default**: `false`
+
+**Description**: By default, `null` is returned when an invalid range is passed. Enable this option to throw a `RangeError` on invalid ranges.
+
+**Example(s)**
+
+The following are all invalid:
 
 ```js
 fill('1.1', '2');   // decimals not supported in ranges
-//=> null
-
-fill('a', '2');     // unmatched values
-//=> null
-
-fill(1, 10, 'foo'); // invalid step
-//=> null
+fill('a', '2');     // incompatible range values
+fill(1, 10, 'foo'); // invalid "step" argument
 ```
 
-If you want errors to be throw, set `options.strict` to true.
+### options.stringify
 
+**Type**: `boolean`
 
-### Custom function
+**Default**: `undefined`
 
-Optionally pass a custom function as last argument or on `options.transform`.
+**Description**: Cast all returned values to strings. By default, integers are returned as numbers.
+
+**Example(s)**
+
+```js
+console.log(fill(1, 5));                    //=> [ 1, 2, 3, 4, 5 ]
+console.log(fill(1, 5, {stringify: true})); //=> [ '1', '2', '3', '4', '5' ]
+```
+
+### options.toRegex
+
+**Type**: `boolean`
+
+**Default**: `undefined`
+
+**Description**: Create a regex-compatible source string, instead of expanding values to an array.
+
+**Example(s)**
+
+```js
+// alphabetical range
+console.log(fill('a', 'e', {toRegex: true})); //=> '[a-e]'
+// alphabetical with step
+console.log(fill('a', 'z', 3, {toRegex: true})); //=> 'a|d|g|j|m|p|s|v|y'
+// numerical range
+console.log(fill('1', '100', {toRegex: true})); //=> '[1-9]|[1-9][0-9]|100'
+// numerical range with zero padding
+console.log(fill('000001', '100000', {toRegex: true}));
+//=> '0{5}[1-9]|0{4}[1-9][0-9]|0{3}[1-9][0-9]{2}|0{2}[1-9][0-9]{3}|0[1-9][0-9]{4}|100000'
+```
+
+### options.transform
+
+**Type**: `function`
+
+**Default**: `undefined`
+
+**Description**: Customize each value in the returned array (or [string](#optionstoRegex)). _(you can also pass this function as the last argument to `fill()`)_.
+
+**Example(s)**
 
 ```js
 // increase padding by two
