--- a/.verb.md
+++ b/.verb.md
@@ -3,12 +3,11 @@
 Expands numbers and letters, optionally using a `step` as the last argument. _(Numbers may be defined as JavaScript numbers or strings)_.
 
 ```js
-var fill = require('{%= name %}');
-fill(from, to[, step, options]);
+const fill = require('{%= name %}');
+// fill(from, to[, step, options]);
 
-// examples
-console.log(fill('1', '10'));                  //=> '[ '1', '2', '3', '4', '5', '6', '7', '8', '9', '10' ]'
-console.log(fill('1', '10', {toRegex: true})); //=> [1-9]|10
+console.log(fill('1', '10')); //=> ['1', '2', '3', '4', '5', '6', '7', '8', '9', '10']
+console.log(fill('1', '10', { toRegex: true })); //=> [1-9]|10
 ```
 
 
@@ -117,7 +116,7 @@ fill(1, 10, 'foo'); // invalid "step" argument
 
 ```js
 console.log(fill(1, 5));                    //=> [ 1, 2, 3, 4, 5 ]
-console.log(fill(1, 5, {stringify: true})); //=> [ '1', '2', '3', '4', '5' ]
+console.log(fill(1, 5, { stringify: true })); //=> [ '1', '2', '3', '4', '5' ]
 ```
 
 ### options.toRegex
@@ -132,13 +131,13 @@ console.log(fill(1, 5, {stringify: true})); //=> [ '1', '2', '3', '4', '5' ]
 
 ```js
 // alphabetical range
-console.log(fill('a', 'e', {toRegex: true})); //=> '[a-e]'
+console.log(fill('a', 'e', { toRegex: true })); //=> '[a-e]'
 // alphabetical with step
-console.log(fill('a', 'z', 3, {toRegex: true})); //=> 'a|d|g|j|m|p|s|v|y'
+console.log(fill('a', 'z', 3, { toRegex: true })); //=> 'a|d|g|j|m|p|s|v|y'
 // numerical range
-console.log(fill('1', '100', {toRegex: true})); //=> '[1-9]|[1-9][0-9]|100'
+console.log(fill('1', '100', { toRegex: true })); //=> '[1-9]|[1-9][0-9]|100'
 // numerical range with zero padding
-console.log(fill('000001', '100000', {toRegex: true}));
+console.log(fill('000001', '100000', { toRegex: true }));
 //=> '0{5}[1-9]|0{4}[1-9][0-9]|0{3}[1-9][0-9]{2}|0{2}[1-9][0-9]{3}|0[1-9][0-9]{4}|100000'
 ```
 
@@ -153,11 +152,7 @@ console.log(fill('000001', '100000', {toRegex: true}));
 **Example(s)**
 
 ```js
-// increase padding by two
-var arr = fill('01', '05', function(val, a, b, step, idx, arr, options) {
-  return repeat('0', (options.maxLength + 2) - val.length) + val;
-});
-
-console.log(arr);
+// add zero padding
+console.log(fill(1, 5, value => String(value).padStart(4, '0')));
 //=> ['0001', '0002', '0003', '0004', '0005']
 ```
